add chi auth 1.1
